force-app/main/default/objects/Agent_Work_Item__c/Agent_Work_Item__c.object-meta.xml
<CustomObject>
    <description>Tracks active work assignments per agent. One record per assigned record. Created on routing assignment, removed on completion or deferral. Powers accurate Current_Load__c on Agent__c and feeds the SLA Escalation Engine.</description>
    <label>Agent Work Item</label>
    <nameField>
        <displayFormat>AWI-{0000000}</displayFormat>
        <label>Work Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Work Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>