force-app/main/default/objects/Agent_Work_Item__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <description>Master-detail to Agent__c. Sharing inherits from parent. Cascade-deletes work items when agent is removed. Roll-up summaries available for load calculations.</description>
    <label>Agent</label>
    <referenceTo>Agent__c</referenceTo>
    <relationshipLabel>Work Items</relationshipLabel>
    <relationshipName>Work_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>