force-app/main/default/objects/Agent_Work_Item__c/fields/Assigned_At__c.field-meta.xml
<CustomField>
    <fullName>Assigned_At__c</fullName>
    <description>DateTime when the record was assigned to the agent. Set once during creation by WorkItemService. Used by EscalationSelector to calculate elapsed time against SLA deadline.</description>
    <label>Assigned At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>