force-app/main/default/objects/Agent_Work_Item__c/fields/Config_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Config_Developer_Name__c</fullName>
    <description>DeveloperName of the Routing_Config__mdt that produced this assignment. Links work items back to their routing configuration for escalation rule lookup and analytics.</description>
    <label>Config Developer Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>