force-app/main/default/objects/Agent_Work_Item__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>API name of the SObject that was routed (e.g. Case, Lead, Loan_Application__c). Used by EscalationSelector to join back to the source record for SLA deadline queries.</description>
    <label>Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>