force-app/main/default/objects/Agent_Work_Item__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>18-character Salesforce ID of the assigned record (Case, Lead, etc.). Stored as Text to support polymorphic routing across any SObject type. Indexed for query performance.</description>
    <externalId>true</externalId>
    <label>Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>